--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
 		android:theme="@style/Theme.TaskManagerApp"
 		tools:targetApi="31">
 		<activity
+			android:name=".UpdateUserActivity"
+			android:exported="false" />
+		<activity
+			android:name=".TaskListActivity"
+			android:exported="false" />
+		<activity
+			android:name=".Task"
+			android:exported="false" />
+		<activity
 			android:name=".Manager_AssignList_Activity"
 			android:exported="false" />
 		<activity
@@ -29,6 +38,7 @@
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
+				
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
