--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools">
 	
+	<uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission-sdk-23 android:name="android.permission.INTERNET" />
+	<uses-permission-sdk-23 android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission-sdk-23 android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	
 	<application
 		android:allowBackup="true"
 		android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +17,12 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.TaskManagerApp"
 		tools:targetApi="31">
+		<activity
+			android:name=".location"
+			android:exported="false" />
+		<activity
+			android:name=".map"
+			android:exported="false" />
 		<activity
 			android:name=".UpdateUserActivity"
 			android:exported="false" />
@@ -45,6 +56,10 @@
 		<activity
 			android:name=".MainActivity"
 			android:exported="false" />
+		
+		<meta-data
+			android:name="com.google.android.geo.API_KEY"
+			android:value="AIzaSyAV4__bRBm3CYlQCvZpvMm4rp_n1b9CVMY" />
 	</application>
 
 </manifest>
